HelloUltraviolet/Fixtures/RejectedSource/Statements/StatementParseError/Expected.uv
//! Expected diagnostic metadata for the StatementParseError rejected-source specimen.

expectedDiagnostic("E-SRC-0520", "rule.18.Parse-Statement-Err")
